# rockPaperScissors

./: Button.qml  CMakeLists.txt  Icon.qml  Monitor.qml  gamelogic.cpp  gamelogic.h  main.cpp  main.qml  qml.qrc  readme.md  resources.qrc  rockPaperScissors.rc
